# ISU-SecOps-Engine

./: .gitattributes  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  auto_rebase.ps1  clippy.toml  deny.toml  docker-compose.yml  rebuild_history.ps1  rustfmt.toml  secops_history.db  spread_history.ps1  taplo.toml
.github/workflows/: ci.yml
demo/: simulation.html
docs/: Architecture.md  Changelog.md  Testing.md
src/: database.rs  fingerprint.rs  main.rs  web.rs
web/: app.js  index.html  style.css
