[package]
name = "secops"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
anyhow = "1"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.4"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "mime"] }
mime_guess = "2.0.5"
